--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "firebase": "^12.4.0",
     "gsap": "^3.13.0",
     "next": "15.5.5",
