--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "axios": "^1.12.2",
     "firebase": "^12.4.0",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-slick": "^0.31.0",
     "yup": "^1.7.1"
