--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
-    "next": "15.5.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
