--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.5.5",
+    "eslint-plugin-import": "^2.32.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "typescript": "^5"
