--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-player": "^3.4.0",
     "react-slick": "^0.31.0",
     "recharts": "^3.6.0",
     "three": "^0.180.0",
