--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
     "axios": "^1.12.2",
+    "clsx": "^2.1.1",
     "firebase": "^12.4.0",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.29.0",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.562.0",
     "next": "^16.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -29,6 +31,7 @@
     "react-player": "^3.4.0",
     "react-slick": "^0.31.0",
     "recharts": "^3.6.0",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.180.0",
     "yup": "^1.7.1"
   },
